--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,11 @@ player_one:
   last_name: name
   email: example@mail.com
   encrypted_password: <%= User.new.send(:password_digest, "123456") %>
+  id: 1
+
+player_two:
+  first_name: user2
+  last_name: name2
+  email: example2@mail.com
+  encrypted_password: <%= User.new.send(:password_digest, "123456") %>
+  id: 2
