--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,11 @@
 player_one:
-  first_name: user
-  last_name: name
+  name: alex
   email: example@mail.com
   encrypted_password: <%= User.new.send(:password_digest, "123456") %>
   id: 1
 
 player_two:
-  first_name: user2
-  last_name: name2
+  name: raphael
   email: example2@mail.com
   encrypted_password: <%= User.new.send(:password_digest, "123456") %>
   id: 2
