--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,11 @@
 AllCops:
   Exclude:
-    - "README.md"
+    - "db/**/*"
+    - "bin/*" 
+    - "config/**/*"
     - "Guardfile"
     - "Rakefile"
-    - "db/schema.rb"
-    - "bin/bundle"
+    - "README.md"
     - "node_modules/**/*"
 
   DisplayCopNames: true
@@ -12,8 +13,14 @@ AllCops:
 Layout/LineLength:
   Max: 120
 Metrics/MethodLength:
+  Include:
+    - "app/controllers/*"
+    - "app/models/*"
   Max: 20
 Metrics/AbcSize:
+  Include:
+    - "app/controllers/*"
+    - "app/models/*"
   Max: 50
 Metrics/ClassLength:
   Max: 150
